# UMultiTargetBuilder

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  package.json
Editor/: AndroidUtil.cs  BuildConfigTarget.cs  BuildTarget.cs  BuildTargetPropertyDrawer.cs  Builder.cs  BuilderCommandline.cs  BuilderConfigIO.cs  BuilderConfigSettings.cs  BuilderConfigSettingsEditor.cs  BuilderIO.cs  BuilderProvider.cs  BuilderSettings.cs  BuilderSettingsEditor.cs  ConfigOptionItemPropertyDrawer.cs  com.codeintrinsic.multitargetbuilder.editor.asmdef  com.linuxsenpai.builder.editor.asmdef  com.linuxsenpai.multitargetbuilder.editor.asmdef
Tests/Editor/: BuildConfigAssert.cs  com.codeintrinsic.builder.editor.test.asmdef  com.linuxsenpai.builder.editor.test.asmdef  com.linuxsenpai.multitargetbuilder.editor.test.asmdef
pictures/: Icon.kra
